--- a/Trading/package.json
+++ b/Trading/package.json
@@ -15,12 +15,14 @@
   "author": "Shay DeWael",
   "license": "MIT",
   "dependencies": {
-    "discord-interactions": "^3.2.0",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "node-fetch": "^3.3.0"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.15"
+    "@discordjs/rest": "^2.3.0",
+    "discord-interactions": "^4.0.0",
+    "discord.js": "^14.15.3",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "node-fetch": "^3.3.2",
+    "pm2": "^5.4.2",
+    "sqlite3": "^5.1.7",
+    "ws": "^8.18.0"
   }
 }
