--- a/Trading/.env
+++ b/Trading/.env
@@ -1,3 +1,7 @@
 DISCORD_TOKEN=<Your bots private key>
 APP_ID=<Your bots apps id>
 PUBLIC_KEY=<your bots public key>
+DOWNTIME_LOG_CHANNEL=<Downtime channel ID>
+TRANSACTION_LOG_CHANNEL=<Buy/sell channel ID>
+GAME_LOG_CHANNEL=<Logbook channel ID>
+CHARACTER_TRACKING_CHANNEL=<Character sheet channel ID>
